--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "First Backend Project",
   "license": "ISC",
   "author": "Vinay Kumar",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
